log
Thu 09 May 2024 09:15:24 PM UTC: 
 tests:  1|8
total_score: 0/70
825f829
Thu 09 May 2024 09:32:20 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b82de08
Thu 09 May 2024 09:34:11 PM UTC: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2d61d09
